tests/fixtures/invalid/max_list_bytes.py
# Cannot call max() with List[int], Bytes
x = max([1, 2, 3], b"hello")
